deploy/infrastructure/traefik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  # labels:
  # pod-security.kubernetes.io/warn: restricted
  # pod-security.kubernetes.io/warn-version: v1.25
