deploy/infrastructure/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v2.9.6
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsGroup: 65532
            runAsUser: 65532
          resources:
          args:
            - '--entrypoints.web.address=:8000/tcp'
            - '--entrypoints.websecure.address=:8443/tcp'
            - '--entrypoints.traefik.address=:9000/tcp'
            - '--providers.kubernetescrd'
            - '--providers.kubernetesingress'
            - '--api.dashboard'
          ports:
            - name: web
              containerPort: 8000
              protocol: TCP
            - name: websecure
              containerPort: 8443
              protocol: TCP
            - name: traefik
              containerPort: 9000
              protocol: TCP
